--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,198 @@
-.App {
-  text-align: center;
+html {
+    line-height: 1.15;
+    -webkit-text-size-adjust: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    margin: 0;
+    background: rgb(187, 205, 211);
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.container{
+    text-align: center;
+    margin: 8% auto;
+    max-width: 50%;
+}
+
+h1 {
+    font-size: 2em;
+    margin: 0.67em 0;
+    color: Black
+}
+
+.button {
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: #4676D7;
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+    transition: 0.3s;
   }
+.button:hover{
+    background: rgb(50, 88, 165);
+    cursor: pointer;
+}
+.buttonGoogle{
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: rgb(199, 65, 60);
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+    transition: 0.3s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.buttonGoogle:hover{
+    background: rgb(141, 40, 37);
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.forms{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+input{
+    width: 50%;
+    padding: 15px 22px;
+    margin: 10px 5px;
+    box-sizing: border-box;
+}
+
+.resend{
+    margin-top: 50px;
+}
+
+.title{
+    text-align: center;
+}
+
+.buttonAnother{
+    appearance: none;
+    border: 0;
+    border-radius: 5px;
+    background: rgb(43, 40, 40);
+    color: #fff;
+    padding: 8px 16px;
+    font-size: 16px;
+    margin: 10px 10px;
+    transition: 0.3s;
+}
+
+.buttonAnother:hover{
+    background: rgb(83, 83, 83);
+}
+
+.Links{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.tab{
+    color: rgb(255, 255, 255);
+    font-family: helvetica;
+    text-decoration: none;
+    text-transform: uppercase;
   }
-  to {
-    transform: rotate(360deg);
+  
+.tab:hover{
+    text-decoration: underline;
   }
+
+.navbar {
+    background-color: #282c34;
+    max-height: 100px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    margin:0px;
+    padding-right: 5%;
+}
+
+.signOut{
+    background: red;
+    height: 100px;
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: rgb(121, 127, 153);
+    max-width: 300px;
+    height: 500px;
+    border-radius: 10px;
+}
+
+.allProducts{
+    display: grid;
+    margin: 0 5% 0 5%;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(auto, 1fr);
+    grid-column-gap: 50px;
+    grid-row-gap: 50px;
+}
+
+.productName{
+    margin: 20px 0 20px;
+
+}
+
+.image{
+    width: 300px;
+    height: 300px;
+}
+
+.productDescription{
+    margin: 10px 0 10px;
+}
+.productPrice{
+    margin-bottom: 10px;
+
+}
+
+a{
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+}
+a.logo{
+    color: white;
+    font-family: helvetica;
+    text-decoration: none;
+    text-transform: uppercase;
+  }
+  
+a:hover {
+    text-decoration: underline;
+}
+
+.forms{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.addProducts{
+    max-width: 50%;
+    margin: 0 40%;
+}
+
+.inputAdd{
+    width: 300px;
+    padding: 15px 22px;
+    margin: 10px 5px;
+    box-sizing: border-box;
 }
